// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile should render 1`] = `
<body>
  <div>
    <div
      class="makeStyles-profileFormPaddingTop-2"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
        >
          <div
            class="makeStyles-errorInputWrapper-5"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-103 makeStyles-inputBottomPadding-1"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                First Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-first-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-first-name"
                      name="firstName"
                      placeholder="First Name"
                      required=""
                      type="text"
                      value="account name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-105 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-106"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-5"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-103 makeStyles-inputBottomPadding-1"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Last Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-last-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-last-name"
                      name="lastName"
                      placeholder="Last Name"
                      type="text"
                      value="account last name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-105 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-106"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-5"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-103 makeStyles-inputBottomPadding-1"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Email
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-email"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                      data-testid="email"
                      disabled=""
                      name="email"
                      placeholder="Email"
                      type="text"
                      value="email@test.com"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-105 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-106"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-formButtonWrapper-3"
      >
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-27 MuiButton-textPrimary Mui-disabled Mui-disabled"
            data-testid="discard-changes-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Discard Changes
            </span>
          </button>
        </span>
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-26 makeStyles-noPadding-23 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
            data-testid="confirm-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-textWrapper-111"
              >
                Save Changes
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should render 2`] = `
<body>
  <div>
    <div
      class="makeStyles-profileFormPaddingTop-113"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
        >
          <div
            class="makeStyles-errorInputWrapper-116"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-214 makeStyles-inputBottomPadding-112"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                First Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-first-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-first-name"
                      name="firstName"
                      placeholder="First Name"
                      required=""
                      type="text"
                      value="account name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-216 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-217"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-116"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-214 makeStyles-inputBottomPadding-112"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Last Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-last-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-last-name"
                      name="lastName"
                      placeholder="Last Name"
                      type="text"
                      value="account last name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-216 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-217"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-116"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-214 makeStyles-inputBottomPadding-112"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Email
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-email"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                      data-testid="email"
                      disabled=""
                      name="email"
                      placeholder="Email"
                      type="text"
                      value="email@test.com"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-216 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-217"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-formButtonWrapper-114"
      >
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-138 MuiButton-textPrimary Mui-disabled Mui-disabled"
            data-testid="discard-changes-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Discard Changes
            </span>
          </button>
        </span>
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-137 makeStyles-noPadding-134 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
            data-testid="confirm-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-textWrapper-222"
              >
                Save Changes
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should show validations 1`] = `
<body>
  <div>
    <div
      class="makeStyles-profileFormPaddingTop-224"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
        >
          <div
            class="makeStyles-errorInputWrapper-227"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-325 makeStyles-inputBottomPadding-223"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                First Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-first-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-first-name"
                      name="firstName"
                      placeholder="First Name"
                      required=""
                      type="text"
                      value="account name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-327 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-328"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-227"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-325 makeStyles-inputBottomPadding-223"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Last Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-last-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-last-name"
                      name="lastName"
                      placeholder="Last Name"
                      type="text"
                      value="account last name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-327 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-328"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-227"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-325 makeStyles-inputBottomPadding-223"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Email
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-email"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                      data-testid="email"
                      disabled=""
                      name="email"
                      placeholder="Email"
                      type="text"
                      value="email@test.com"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-327 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-328"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-formButtonWrapper-225"
      >
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-249 MuiButton-textPrimary Mui-disabled Mui-disabled"
            data-testid="discard-changes-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Discard Changes
            </span>
          </button>
        </span>
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-248 makeStyles-noPadding-245 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
            data-testid="confirm-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-textWrapper-333"
              >
                Save Changes
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should show validations for first name 1`] = `
<body>
  <div>
    <div
      class="makeStyles-profileFormPaddingTop-335"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
        >
          <div
            class="makeStyles-errorInputWrapper-338"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-436 makeStyles-inputBottomPadding-334"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                First Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-first-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-first-name"
                      name="firstName"
                      placeholder="First Name"
                      required=""
                      type="text"
                      value="account name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-438 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-439"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-338"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-436 makeStyles-inputBottomPadding-334"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Last Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-last-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-last-name"
                      name="lastName"
                      placeholder="Last Name"
                      type="text"
                      value="account last name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-438 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-439"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-338"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-436 makeStyles-inputBottomPadding-334"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Email
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-email"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                      data-testid="email"
                      disabled=""
                      name="email"
                      placeholder="Email"
                      type="text"
                      value="email@test.com"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-438 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-439"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-formButtonWrapper-336"
      >
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-360 MuiButton-textPrimary Mui-disabled Mui-disabled"
            data-testid="discard-changes-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Discard Changes
            </span>
          </button>
        </span>
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-359 makeStyles-noPadding-356 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
            data-testid="confirm-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-textWrapper-444"
              >
                Save Changes
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;
